fix header on mobile

--- a/_sass/_site-header.scss
+++ b/_sass/_site-header.scss
@@ -26,6 +26,7 @@
       line-height: 56px;
       align-self: center;
       @include media-query($on-palm) {
+        align-self: left;
         font-size: 1.1em;
         line-height: 1.4;
       }
@@ -33,6 +34,9 @@
   ul {
     margin:0;
     align-self: center;
+    @include media-query($on-palm) {
+      align-self: left;
+    }
   }
   li {
     font-size: 0.8em;
@@ -41,6 +45,7 @@
     margin-right: 1.3em;
     @include media-query($on-palm) {
       margin-right: 1em;
+
     }
   }
   @include media-query($on-palm) {
